terraform/modules/vpc/igw.tf
# ---------------------------
# Internet Gateway
# ---------------------------

resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.this.id

  tags = {
    Name = "${var.environment}-igw"
  }
}
